<resources>
    <string name="app_name">Sih_rozgaar</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="email">email</string>
    <string name="title_activity_side_navigation">SideNavigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="files">files</string>
    <string name="scan">scan</string>
    <string name="profle">profile</string>
</resources>
